--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Analyze A/B Test Results\n",
     "\n",
-    "This project will assure you have mastered the subjects covered in the statistics lessons.  The hope is to have this project be as comprehensive of these topics as possible.  Good luck!\n",
+    "This project will assure you have mastered the subjects covered in the statistics lessons.  The hope is to have this project be as comprehensive of these topics as possible.\n",
     "\n",
     "## Table of Contents\n",
     "- [Introduction](#intro)\n",
@@ -2156,33 +2156,7 @@
     "\n",
     "After preforming AB/ tests, regression approachs (through logistic regression model) and the interaction of countries and landing pages in the regression model, it is possible to conclude that the features analyzed in this project doesn't provide significant impact when predicting if an individual converts or not to the new webpage.\n",
     "\n",
-    "The results showed that the company should keep the old webpage (failed to reject the null hypothesis) but other parameters should be analyzed, like the timestamp data, in order to the company verify insights if it should implement or not the new webpage.\n",
-    "\n",
-    "### Gather Submission Materials\n",
-    "\n",
-    "Once you are satisfied with the status of your Notebook, you should save it in a format that will make it easy for others to read. You can use the __File -> Download as -> HTML (.html)__ menu to save your notebook as an .html file. If you are working locally and get an error about \"No module name\", then open a terminal and try installing the missing module using `pip install <module_name>` (don't include the \"<\" or \">\" or any words following a period in the module name).\n",
-    "\n",
-    "You will submit both your original Notebook and an HTML or PDF copy of the Notebook for review. There is no need for you to include any data files with your submission. If you made reference to other websites, books, and other resources to help you in solving tasks in the project, make sure that you document them. It is recommended that you either add a \"Resources\" section in a Markdown cell at the end of the Notebook report, or you can include a `readme.txt` file documenting your sources.\n",
-    "\n",
-    "### Submit the Project\n",
-    "\n",
-    "When you're ready, click on the \"Submit Project\" button to go to the project submission page. You can submit your files as a .zip archive or you can link to a GitHub repository containing your project files. If you go with GitHub, note that your submission will be a snapshot of the linked repository at time of submission. It is recommended that you keep each project in a separate repository to avoid any potential confusion: if a reviewer gets multiple folders representing multiple projects, there might be confusion regarding what project is to be evaluated.\n",
-    "\n",
-    "It can take us up to a week to grade the project, but in most cases it is much faster. You will get an email once your submission has been reviewed. If you are having any problems submitting your project or wish to check on the status of your submission, please email us at dataanalyst-project@udacity.com. In the meantime, you should feel free to continue on with your learning journey by beginning the next module in the program."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Referece to build some markdown cells:\n",
-    "https://jupyter-notebook.readthedocs.io/\n",
-    "\n",
-    "Variables named according to standards seen in classes.\n",
-    "\n",
-    "Link of stats.proportions_ztest was broken. Examples on how to use this function were observed at stackeroverflow website."
+    "The results showed that the company should keep the old webpage (failed to reject the null hypothesis) but other parameters should be analyzed, like the timestamp data, in order to the company verify insights if it should implement or not the new webpage."
    ]
   }
  ],
@@ -2202,7 +2176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
